# kimojio-rs

./: .gitignore  APOLOGY.md  CHANGELOG.md  Cargo.toml  FUTURE.md  LICENSE.txt  README.md  TODO.md  WHY_NOT_RUST_ASYNC.md  WHY_STACKS.md
examples/: Cargo.toml  README.md  copyfile.md  tls-echo-server.md
examples/benches/: object_gateway.rs
examples/copyfile/src/: main.rs
examples/go/: tcp_echo_host.go
examples/go/object_gateway/: client.go  generate-proto.sh  generate.go  go.mod  go.sum  main.go  object_gateway_test.go
examples/proto/: object_gateway.proto
examples/retry-backoff/: Cargo.toml
examples/retry-backoff/src/: main.rs
examples/src/: lib.rs  stack_router_ported_full_stack.rs  stack_router_ported_middleware.rs  stack_router_ported_routes.rs  stack_router_ported_stateful.rs  tls_support.rs
examples/src/object_gateway/: admin.rs  conformance.rs  launch.rs  live.rs  mod.rs  model.rs  proto.rs  stack_steal.rs  stackful.rs  storage.rs  telemetry.rs  tokio_impl.rs  workload.rs
examples/tests/: object_gateway_conformance.rs  object_gateway_go.rs  object_gateway_tokio.rs  object_gateway_workload.rs  stack_router_conformance.rs  stack_router_porting.rs  stack_router_workload.rs
examples/tls-echo-server/: Cargo.toml  README.md
examples/tls-echo-server/src/: main.rs
examples/virtual-time/: Cargo.toml
examples/virtual-time/src/: main.rs
kimojio/: Cargo.toml
kimojio-macros/: Cargo.toml
kimojio-macros/src/: lib.rs
kimojio-stack/: CANCEL-DESIGN.md  Cargo.toml  REVIEW.md  WORKSTEALING.md
kimojio-stack-grpc/: Cargo.toml  STREAMING.md  TODO.md
kimojio-stack-grpc/benches/: unary_rpc.rs
kimojio-stack-grpc/src/: client.rs  codec.rs  error.rs  lib.rs  metadata.rs  server.rs  status.rs
kimojio-stack-grpc/tests/: client_interop.rs  interop_proto.rs  protocol_limits.rs  server_interop.rs  tls_interop.rs
kimojio-stack-http/: Cargo.toml
kimojio-stack-http/benches/: http_request_response.rs
kimojio-stack-http/src/: body.rs  client.rs  config.rs  error.rs  headers.rs  lib.rs  server.rs  tls.rs  transport.rs
kimojio-stack-http/src/h2/: client.rs  codec.rs  connection.rs  frame.rs  hpack.rs  mod.rs  server.rs  settings.rs  stream.rs
kimojio-stack-http/src/http1/: body.rs  client.rs  codec.rs  mod.rs  read_buf.rs  server.rs
kimojio-stack-http/tests/: alpn.rs  h2_interop.rs  http1_interop.rs  protocol_limits.rs  tls_errors.rs  tls_interop.rs
kimojio-stack-http/tests/support/: mod.rs
kimojio-stack-multithread/: Cargo.toml
kimojio-stack-multithread/src/: lib.rs
kimojio-stack-opentelemetry/: Cargo.toml
kimojio-stack-opentelemetry/src/: client.rs  error.rs  lib.rs  logs.rs  metrics.rs  proto.rs
kimojio-stack-opentelemetry/tests/: receiver_interop.rs
kimojio-stack-router/: Cargo.toml
kimojio-stack-router/benches/: router_baseline.rs
kimojio-stack-router/src/: body.rs  extract.rs  handler.rs  lib.rs  rejection.rs  response.rs  router.rs  runtime.rs  serve.rs
kimojio-stack-router/tests/: router_core.rs  server_integration.rs
kimojio-stack-sqlite/: Cargo.toml
kimojio-stack-sqlite/examples/: rusqlite_vfs.rs
kimojio-stack-sqlite/src/: diagnostics.rs  file.rs  lib.rs  path.rs  rusqlite.rs  shm.rs  vfs.rs
kimojio-stack-sqlite/tests/: rusqlite_helpers.rs  scheduler_progress.rs  vfs_core.rs  vfs_validation.rs
kimojio-stack-steal/: Cargo.toml  TODO.md
kimojio-stack-steal/benches/: runtime_baseline.rs
kimojio-stack-steal/src/: lib.rs  runtime_api.rs
kimojio-stack-steal/tests/: runtime_api.rs  sfq_allocation.rs  sfq_fairness.rs  sfq_scheduler.rs  sfq_tenant_api.rs
kimojio-stack-storage/: Cargo.toml
kimojio-stack-storage/src/: archive.rs  auth.rs  backup_status.rs  block.rs  body.rs  compat.rs  conditions.rs  config_reader.rs  container.rs  copy.rs  diagnostics.rs  error.rs  lib.rs  list.rs  metadata.rs  model.rs  ownership.rs  page.rs  pool.rs  properties.rs  retry.rs  routing.rs  snapshot.rs  snapshot_cleanup.rs  tenant_init.rs  testing.rs  transport.rs
kimojio-stack-storage/tests/: allocation.rs  compatibility.rs  emulator.rs  integration_modes.rs  real_storage.rs
kimojio-stack-tls/: Cargo.toml
kimojio-stack-tls/benches/: rpc_write.rs  tls_read_write.rs
kimojio-stack-tls/docs/: CUSTOM_BIO.md  OFFLOAD.md
kimojio-stack-tls/src/: lib.rs
kimojio-stack-tls2/: Cargo.toml
kimojio-stack-tls2/benches/: tls_compare.rs
kimojio-stack-tls2/src/: lib.rs
kimojio-stack-tower/: Cargo.toml
kimojio-stack-tower/benches/: middleware_baseline.rs
kimojio-stack-tower/src/: error.rs  lib.rs  service.rs
kimojio-stack-tower/src/http/: add_extension.rs  auth.rs  cache.rs  cors.rs  (+17 more)
kimojio-stack-tower/tests/: core_middleware.rs  dynamic_middleware.rs  http_middleware.rs  service_layer.rs  stateful_body_middleware.rs
kimojio-stack/benches/: runtime_baseline.rs
kimojio-stack/src/: barrier.rs  lib.rs  mutex.rs  notify.rs  once.rs  runtime_api.rs  rwlock.rs  semaphore.rs  wait.rs  watch.rs
kimojio-stack/tests/: runtime_api.rs
kimojio-tls/: Cargo.toml  build.rs
kimojio-tls-pool/: Cargo.toml  README.md
kimojio-tls-pool/benches/: rpc_write.rs
kimojio-tls-pool/src/: config.rs  error.rs  lib.rs  operation.rs  policy.rs  pool.rs  stats.rs  stream.rs  tls.rs
kimojio-tls-pool/tests/: rpc_write.rs  same_stream.rs  support.rs
kimojio-tls/src/: lib.rs  openssl_stream.c
kimojio/benches/: async_bench.rs  async_stream_bench.rs  backtrace_bench.rs  disk_bench.rs  iouring.rs  mut_in_place_cell_bench.rs
kimojio/src/: async_channel.rs  async_event.rs  async_lock.rs  async_oneshot.rs  async_reader_writer_lock.rs  async_semaphore.rs  async_stream.rs  buffer_pipe.rs  cancellation_token.rs  clock.rs  configuration.rs  errors.rs  handle_table.rs  io_scope.rs  io_type.rs  lib.rs  message_pipe.rs  mut_in_place_cell.rs  operations.rs  pipe.rs  pointer_buffer.rs  prefix_buffer.rs  ring_future.rs  runtime.rs  runtime_handle.rs  socket_helpers.rs  task.rs  task_pool.rs  task_ref.rs  task_state_cell.rs  timer.rs  tlscontext.rs  tlsstream.rs  tracing.rs  uring_stats.rs  virtual_clock.rs
kimojio/tests/: io_scope.rs  virtual_clock_integration.rs
(+95 files in other folders)
