[workspace]

members = [
    "kimojio",
    "kimojio-macros",
    "kimojio-stack",
    "kimojio-stack-grpc",
    "kimojio-stack-http",
    "kimojio-stack-opentelemetry",
    "kimojio-stack-storage",
    "kimojio-stack-tls",
    "kimojio-tls",
    "perf",
    "examples",
]

resolver = "3"

[workspace.package]
version = "0.16.5"
edition = "2024"
license = "MIT"
homepage = "https://github.com/Azure/kimojio-rs"
repository = "https://github.com/Azure/kimojio-rs"
readme = "README.md"

[workspace.dependencies]
bytes = "1"
base64 = "0.22"
cc = "1"
criterion = { version = "0.8", default-features = false }
corosensei = "0.3.4"
crossbeam-queue = "0.3"
foreign-types-shared = "0.1"
futures = "0.3"
hpack = "0.3"
http = "1"
http-body-util = "0.1"
httpdate = "1"
httparse = "1"
hyper = "1"
hyper-util = "0.1"
impls = "1"
intrusive-collections = "0.10"
kimojio = { path = "kimojio", version = "0.16.5" }
kimojio-macros = { path = "kimojio-macros", version = "0.16.5" }
kimojio-stack-grpc = { path = "kimojio-stack-grpc", version = "0.0.1-alpha.0" }
kimojio-stack-http = { path = "kimojio-stack-http", version = "0.0.1-alpha.0" }
kimojio-stack-opentelemetry = { path = "kimojio-stack-opentelemetry", version = "0.0.1-alpha.0" }
kimojio-stack = { path = "kimojio-stack", version = "0.0.1-alpha.0" }
kimojio-stack-storage = { path = "kimojio-stack-storage", version = "0.0.1-alpha.0" }
kimojio-stack-tls = { path = "kimojio-stack-tls", version = "0.0.1-alpha.0" }
kimojio-tls = { path = "kimojio-tls", version = "0.16.5" }
libc = "0.2"
mimalloc = "0.1"
openssl = "0.10"
opentelemetry-proto = { version = "0.32", default-features = false }
pin-project-lite = "0.2"
prost = "0.14"
rcgen = { version = "0.14", features = ["x509-parser"] }
roaring = "0.11"
serde_json = "1"
rustix = { version = "1", features = [
    "io_uring",
    "mount",
    "fs",
    "mm",
    "process",
    "rand",
    "system",
    "time",
    "thread",
] }
rustix-uring = { version = "0.6" }
scopeguard = "1"
static_assertions = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "time"] }
tonic = "0.14"
tonic-prost = "0.14"
uuid = { version = "1", features = ["v4"] }
zerocopy = { version = "0.8", features = ["derive"] }

# from macros
quote = "1"
syn = { version = "2", features = ["full"] }

# for examples
anyhow = "1"
clap = { version = "4", features = ["derive"] }
