[package]
name = "examples"
version = "0.1.0"
edition = "2024"
publish = false

[features]
tls = ["kimojio/tls", "dep:openssl"]
virtual-clock = ["kimojio/virtual-clock"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
kimojio.workspace = true
kimojio-stack.workspace = true
kimojio-stack-steal.workspace = true
openssl = { workspace = true, optional = true }
rustix.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "rt-multi-thread"] }

[[bin]]
name = "copyfile"
path = "src/bin/copyfile.rs"

[[bin]]
name = "retry-backoff"
path = "src/bin/retry_backoff.rs"
required-features = ["virtual-clock"]

[[bin]]
name = "tls-echo-server"
path = "src/bin/tls_echo_server.rs"
required-features = ["tls"]

[[bin]]
name = "tcp-echo-client"
path = "src/bin/tcp_echo_client.rs"

[[bin]]
name = "tcp-echo-kimojio-host"
path = "src/bin/tcp_echo_kimojio_host.rs"

[[bin]]
name = "tcp-echo-stack-host"
path = "src/bin/tcp_echo_stack_host.rs"

[[bin]]
name = "tcp-echo-tokio-host"
path = "src/bin/tcp_echo_tokio_host.rs"

[[bin]]
name = "virtual-time"
path = "src/bin/virtual_time.rs"
required-features = ["virtual-clock"]
