[package]
name = "kimojio-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = "Kimojio macros"

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
syn.workspace = true