[package]
name = "kimojio-stack-grpc"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = "gRPC client and server foundations for kimojio-stack"

[dependencies]
bytes.workspace = true
http.workspace = true
kimojio-stack-http.workspace = true
prost.workspace = true

[dev-dependencies]
criterion.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["client", "server", "http1", "http2"] }
hyper-util = { workspace = true, features = ["client", "server", "tokio", "http1", "http2"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tonic = { workspace = true, features = ["transport"] }
