[package]
name = "kimojio-stack-http"
version = "0.0.1-alpha.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = "HTTP client and server foundations for kimojio-stack"

[features]
default = ["tls"]
tls = ["dep:kimojio-stack-tls"]

[dependencies]
bytes.workspace = true
hpack.workspace = true
http.workspace = true
httpdate.workspace = true
httparse.workspace = true
kimojio-stack.workspace = true
kimojio-stack-tls = { workspace = true, optional = true }
rustix = { workspace = true, features = ["net"] }

[dev-dependencies]
criterion.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["client", "server", "http1", "http2"] }
hyper-util = { workspace = true, features = ["client", "server", "tokio", "http1", "http2"] }
kimojio-stack-steal.workspace = true
libc.workspace = true
openssl.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "sync", "time", "io-util"] }

[[bench]]
name = "http_request_response"
harness = false
