[package]
name = "kimojio-stack-multithread"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = "Multithreaded worker runtime for kimojio-stack"

[dependencies]
kimojio-stack.workspace = true
