[package]
name = "kimojio-stack-router"
version = "0.0.1-alpha.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = "Stackful HTTP router and extractor foundations for kimojio-stack"
publish = false

[features]
default = []

[dependencies]
bytes.workspace = true
http.workspace = true
kimojio-stack.workspace = true
kimojio-stack-steal.workspace = true
kimojio-stack-http = { path = "../kimojio-stack-http", version = "0.0.1-alpha.0", default-features = false }
kimojio-stack-tower.workspace = true

[dev-dependencies]
criterion.workspace = true
rustix = { workspace = true, features = ["net"] }

[[bench]]
name = "router_baseline"
harness = false
