[package]
name = "kimojio-stack-steal"
version = "0.0.1-alpha.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = "Work-stealing stackful coroutine runtime"
publish = false

[features]
default = []
tokio = ["dep:tokio"]

[dependencies]
corosensei.workspace = true
crossbeam-deque.workspace = true
crossbeam-queue.workspace = true
kimojio-stack.workspace = true
libc.workspace = true
rustix = { workspace = true, features = ["event", "fs", "mm", "net", "param", "pipe"] }
rustix-uring.workspace = true
tokio = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "runtime_baseline"
harness = false
