[package]
name = "kimojio-stack-storage"
version = "0.0.1-alpha.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = "Low-allocation durable object storage client foundations for kimojio-stack"

[features]
default = []
tls = ["kimojio-stack-http/tls"]

[dependencies]
bytes.workspace = true
http.workspace = true
kimojio-stack.workspace = true
kimojio-stack-http = { path = "../kimojio-stack-http", version = "0.0.1-alpha.0", default-features = false }
serde_json.workspace = true

[dev-dependencies]
base64.workspace = true
httpdate.workspace = true
kimojio-stack-steal.workspace = true
openssl.workspace = true
