[package]
name = "kimojio-stack"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = "Stackful coroutine runtime with structured concurrency"

[dependencies]
corosensei.workspace = true
crossbeam-queue.workspace = true
libc.workspace = true
rustix = { workspace = true, features = ["event", "fs", "mm", "net", "param", "pipe"] }
rustix-uring.workspace = true

[dev-dependencies]
criterion.workspace = true
tokio.workspace = true

[[bench]]
name = "runtime_baseline"
harness = false
