[package]
name = "kimojio-tls-pool"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
description = "Runtime-independent OpenSSL TLS pool"

[dependencies]
openssl.workspace = true
rustix = { workspace = true, features = ["event", "fs"] }

[dev-dependencies]
criterion.workspace = true
rcgen.workspace = true
tempfile.workspace = true

[[bench]]
name = "rpc_write"
harness = false
